clusters/hive/apps/umami/k8s-manifests/umami-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  labels:
    app: umami
  namespace: umami
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      serviceAccountName: umami
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: ghcr.io/umami-software/umami:postgresql-v2.18.1
          imagePullPolicy: Always
          name: umami
