clusters/hive/apps/umami/k8s-manifests/umami-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: umami
  name: umami
  namespace: umami
spec:
  ports:
    - name: umami
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: umami
  sessionAffinity: None
  type: ClusterIP
